@@ -74,11 +74,13 @@ int mqtt3_handle_connack(struct mosquitto_db *db, struct mosquitto *context)
 							return 1;
 						}
 					}else{
-						if(_mosquitto_send_unsubscribe(context, NULL, context->bridge->topics[i].remote_topic)){
-							/* direction = inwards only. This means we should not be subscribed
-			 				 * to the topic. It is possible that we used to be subscribed to
-			 				 * this topic so unsubscribe. */
-							return 1;
+						if(context->bridge->attempt_unsubscribe){
+							if(_mosquitto_send_unsubscribe(context, NULL, context->bridge->topics[i].remote_topic)){
+								/* direction = inwards only. This means we should not be subscribed
+								* to the topic. It is possible that we used to be subscribed to
+								* this topic so unsubscribe. */
+								return 1;
+							}
 						}
 					}
 				}
